WIP - cleaning up the fields

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ exports.startup = function() {
 
 })();</pre>
 </div>
-<div created="20210905160614585" modified="20210905160614585" title="$:/config/AutoSave">
+<div created="20210905160614585" modified="20210905161749845" title="$:/config/AutoSave">
 <pre>no</pre>
 </div>
 <div created="20210611221838525" modified="20210612122918808" title="$:/config/DefaultSidebarTab">
@@ -11262,8 +11262,8 @@ $:/CustomHomePage/shortcuts-viewer</pre>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20210905160621867" modified="20210905160622279" title="$:/language/ControlPanel/Saving/GitService/CommitMessage">
-<pre>WIP</pre>
+<div created="20210905160621867" modified="20210905161759678" title="$:/language/ControlPanel/Saving/GitService/CommitMessage">
+<pre>WIP - cleaning up the fields</pre>
 </div>
 <div created="20210611231023565" modified="20210827004539126" title="$:/palette">
 <pre>$:/palettes/Twilight</pre>
@@ -13730,7 +13730,7 @@ $text$
 <div created="20210825194023158" modified="20210825194206998" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20210611200641886" icon="Calendar icon" modified="20210905153406766" tags="shortcut $:/CustomHomePage/ui-element" title="calendar" url="https://calendar.google.com">
+<div created="20210611200641886" icon="Calendar icon" modified="20210905161739113" tags="shortcut $:/CustomHomePage/ui-element" title="calendar" url="https://calendar.google.com">
 <pre></pre>
 </div>
 <div created="20210826215441363" modified="20210826220153325" tags="" title="Calendar icon">
@@ -13749,7 +13749,7 @@ This edition is a very rough ''work in progress'',  expect a lot of things to be
 <div created="20210611195553321" icon="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" modified="20210905153247622" tags="shortcut $:/CustomHomePage/ui-element" title="facebook" url="https://www.facebook.com/messages">
 <pre></pre>
 </div>
-<div background-color="auto" created="20210611200937840" description="" icon="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/512px-Gmail_icon_%282020%29.svg.png" modified="20210826222043363" tags="shortcut $:/CustomHomePage/ui-element" title="gmail" url="https://mail.google.com">
+<div created="20210611200937840" icon="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/512px-Gmail_icon_%282020%29.svg.png" modified="20210905161732453" tags="shortcut $:/CustomHomePage/ui-element" title="gmail" url="https://mail.google.com">
 <pre></pre>
 </div>
 <div created="20210905154245167" modified="20210905160115368" tags="pinned" title="How to use">
@@ -13760,7 +13760,7 @@ This edition is a very rough ''work in progress'',  expect a lot of things to be
 * You can add custom search engine here : [[$:/CustomHomePage/Web Search]]
 * This edition include a Kanban for basic task management, you can delete it with the [[bulk delete tool|$:/CustomHomePage/Shortcuts/BulkDelete]] with the tag `$:/Tasker/Kanban`. It also has an utility to save to github, to delete it use the tag `$:/SaveToGitHub`.</pre>
 </div>
-<div background-color="auto" created="20210611210926068" description="" icon="https://reddit.musicplayer.io/images/icon/favicon.ico" modified="20210826222043363" tags="shortcut $:/CustomHomePage/ui-element" title="musicplayer" url="https://reddit.musicplayer.io/">
+<div created="20210611210926068" icon="https://reddit.musicplayer.io/images/icon/favicon.ico" modified="20210905161657735" tags="shortcut $:/CustomHomePage/ui-element" title="musicplayer" url="https://reddit.musicplayer.io/">
 <pre></pre>
 </div>
 <div created="20210611213718407" description="Link to your local wikis" modified="20210826223825956" tags="" title="My tiddlywikis">
@@ -13781,13 +13781,13 @@ This edition is a very rough ''work in progress'',  expect a lot of things to be
 
 * [ext[name|name.html]]</pre>
 </div>
-<div created="20210611195327653" icon="https://cdn.worldvectorlogo.com/logos/reddit-2.svg" modified="20210905153235067" tags="shortcut $:/CustomHomePage/ui-element" title="reddit" url="https://www.reddit.com/">
+<div created="20210611195327653" icon="https://cdn.worldvectorlogo.com/logos/reddit-2.svg" modified="20210905161713912" tags="shortcut $:/CustomHomePage/ui-element" title="reddit" url="https://www.reddit.com/">
 <pre></pre>
 </div>
-<div created="20210611213656788" modified="20210827183847110" tags="folder shortcut $:/CustomHomePage/ui-element" tiddler="My tiddlywikis" title="TW">
+<div created="20210611213656788" modified="20210905161745301" tags="folder shortcut $:/CustomHomePage/ui-element" tiddler="My tiddlywikis" title="TW">
 <pre></pre>
 </div>
-<div background-color="auto" created="20210611200011322" description="" icon="https://www.youtube.com/s/desktop/6c0ab046/img/favicon_96x96.png" modified="20210905152956798" tags="shortcut $:/CustomHomePage/ui-element" title="youtube" url="https://www.youtube.com">
+<div created="20210611200011322" icon="https://www.youtube.com/s/desktop/6c0ab046/img/favicon_96x96.png" modified="20210905161707557" tags="shortcut $:/CustomHomePage/ui-element" title="youtube" url="https://www.youtube.com">
 <pre></pre>
 </div>
 
