WIP - added a small explanation for the tiddler [[Calendar icon]]

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ exports.startup = function() {
 
 })();</pre>
 </div>
-<div created="20210905160614585" modified="20210906220021486" title="$:/config/AutoSave">
+<div created="20210905160614585" modified="20210906220609905" title="$:/config/AutoSave">
 <pre>no</pre>
 </div>
 <div created="20210611221838525" modified="20210612122918808" title="$:/config/DefaultSidebarTab">
@@ -13072,8 +13072,9 @@ width:100%;
 <div created="20210806021302793" modified="20210813030810346" tags="$:/SaveToGitHub" title="$:/SaveToGitHub/Hint" type="text/plain">
 <pre>save to GitHub</pre>
 </div>
-<div created="20210806130312321" modified="20210813030810346" tags="$:/SaveToGitHub" title="$:/SaveToGitHub/PublishFilter">
-<pre>-[tag[private]] -$:/HistoryList -[search:title[$:/state/folded]] -[search:title[$:/GitHub]] -[search:title[$:/SaveToGitHub/private]]
+<div created="20210806130312321" modified="20210906220556271" tags="$:/SaveToGitHub" title="$:/SaveToGitHub/PublishFilter">
+<pre>-[has[task]] 
+-[tag[private]] -$:/HistoryList -[search:title[$:/state/folded]] -[search:title[$:/GitHub]] -[search:title[$:/SaveToGitHub/private]]
 </pre>
 </div>
 <div ask-commit="false" caption="Github" created="20210805131146320" modified="20210906215724544" tags="$:/SaveToGitHub $:/tags/SideBar" title="$:/SaveToGitHub/Settings">
@@ -13244,7 +13245,7 @@ width:100%;
 <div created="20210612124334506" modified="20210905153613747" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20210611141811499" modified="20210906215702098" title="$:/state/tab/sidebar--595412856">
+<div created="20210611141811499" modified="20210906220433142" title="$:/state/tab/sidebar--595412856">
 <pre>$:/SaveToGitHub/Settings</pre>
 </div>
 <div created="20210611135640424" modified="20210818203028398" title="$:/state/tabs/controlpanel/toolbars-1345989671">
