WIP - removed superfluous set widget in [[$:/CustomHomePage/Config/Shortcut/Default]]

--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@ Error message and password prompt
 
 <li>$:/state/palettemanager/showexternal</li>
 
+<li>$:/state/plugin-info--1034462018-$:/plugins/kookma/commander---1761233796</li>
+
 <li>$:/state/showeditpreview</li>
 
 <li>$:/state/ShowPaletteEditor</li>
@@ -478,7 +480,7 @@ exports.startup = function() {
 
 })();</pre>
 </div>
-<div created="20210905160614585" modified="20210906223818776" title="$:/config/AutoSave">
+<div created="20210905160614585" modified="20210906224936781" title="$:/config/AutoSave">
 <pre>no</pre>
 </div>
 <div created="20210611221838525" modified="20210612122918808" title="$:/config/DefaultSidebarTab">
@@ -11262,7 +11264,7 @@ $:/CustomHomePage/shortcuts-viewer</pre>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
-<div created="20210905160621867" modified="20210906223812107" title="$:/language/ControlPanel/Saving/GitService/CommitMessage">
+<div created="20210905160621867" description="This text will be used for the commit message when saving to github" modified="20210906224017107" title="$:/language/ControlPanel/Saving/GitService/CommitMessage">
 <pre>WIP - removed superfluous set widget in [[$:/CustomHomePage/Config/Shortcut/Default]]</pre>
 </div>
 <div created="20210611231023565" modified="20210827004539126" title="$:/palette">
@@ -13070,12 +13072,12 @@ width:100%;
 <div created="20210806021302793" modified="20210813030810346" tags="$:/SaveToGitHub" title="$:/SaveToGitHub/Hint" type="text/plain">
 <pre>save to GitHub</pre>
 </div>
-<div created="20210806130312321" modified="20210906220556271" tags="$:/SaveToGitHub" title="$:/SaveToGitHub/PublishFilter">
+<div created="20210806130312321" description="If no filter is specified, ALL tiddlers will be uploaded when saving to github." modified="20210906224223855" tags="$:/SaveToGitHub" title="$:/SaveToGitHub/PublishFilter">
 <pre>-[has[task]] 
 -[tag[private]] -$:/HistoryList -[search:title[$:/state/folded]] -[search:title[$:/GitHub]] -[search:title[$:/SaveToGitHub/private]]
 </pre>
 </div>
-<div ask-commit="false" caption="Github" created="20210805131146320" modified="20210906215724544" tags="$:/SaveToGitHub $:/tags/SideBar" title="$:/SaveToGitHub/Settings">
+<div ask-commit="true" caption="Github" created="20210805131146320" modified="20210906223835787" tags="$:/SaveToGitHub $:/tags/SideBar" title="$:/SaveToGitHub/Settings">
 <pre>\define lingo-base() $:/language/ControlPanel/Saving/GitService/
 \define service-name() ~GitHub
 
@@ -13174,11 +13176,11 @@ width:100%;
 <div created="20210611135437568" modified="20210611135441232" title="$:/SiteTitle">
 <pre>Custom Home Page</pre>
 </div>
-<div created="20210611143743724" modified="20210906222236334" title="$:/state/advancedsearch/currentTab">
-<pre>$:/core/ui/AdvancedSearch/System</pre>
+<div created="20210611143743724" modified="20210906224648535" title="$:/state/advancedsearch/currentTab">
+<pre>$:/core/ui/AdvancedSearch/Filter</pre>
 </div>
-<div created="20210807213155713" modified="20210905153041058" title="$:/state/commander/log-tiddler">
-<pre>$:/temp/commander/logs/tid-11</pre>
+<div created="20210807213155713" modified="20210906224826108" title="$:/state/commander/log-tiddler">
+<pre>$:/temp/commander/logs/tid-1</pre>
 </div>
 <div created="20210905153117924" modified="20210905153117924" title="$:/state/commander/reveal/$:/plugins/kookma/commander/log/ui-607722857">
 <pre>open</pre>
@@ -13198,6 +13200,9 @@ width:100%;
 <div created="20210611231140571" modified="20210826225128598" title="$:/state/palettemanager/showexternal">
 <pre>no</pre>
 </div>
+<div created="20210906224301977" modified="20210906224302507" title="$:/state/plugin-info--1034462018-$:/plugins/kookma/commander---1761233796">
+<pre>contents</pre>
+</div>
 <div created="20210818203759540" modified="20210827190811637" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
@@ -13210,8 +13215,8 @@ width:100%;
 <div created="20210827183946006" modified="20210827183946006" title="$:/state/tab--103319216">
 <pre>$:/plugins/kookma/commander/field/uicomp/remove-fields</pre>
 </div>
-<div created="20210611143743725" modified="20210906222236334" title="$:/state/tab--1498284803">
-<pre>$:/core/ui/AdvancedSearch/System</pre>
+<div created="20210611143743725" modified="20210906224648536" title="$:/state/tab--1498284803">
+<pre>$:/core/ui/AdvancedSearch/Filter</pre>
 </div>
 <div created="20210611135633954" modified="20210826080917256" title="$:/state/tab--1963855381">
 <pre>$:/core/ui/ControlPanel/Palette</pre>
@@ -13234,8 +13239,8 @@ width:100%;
 <div created="20210905151636359" modified="20210905151636359" title="$:/state/tab-567217392">
 <pre>$:/plugins/kookma/commander/tag/uicomp/add-remove-tags</pre>
 </div>
-<div created="20210827183943777" modified="20210905152726159" title="$:/state/tab-607722857">
-<pre>$:/plugins/kookma/commander/tag/ui</pre>
+<div created="20210827183943777" modified="20210906224822587" title="$:/state/tab-607722857">
+<pre>$:/plugins/kookma/commander/tiddler/ui</pre>
 </div>
 <div created="20210905151750073" modified="20210905151750837" title="$:/state/tab-714125944">
 <pre>$:/core/ui/TiddlerInfo/Fields</pre>
